--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -21,7 +21,34 @@ BuildUnitTests:
     - make
     - make clean
   artifacts:
-    expire_in: 2d
+    paths:
+      - "UnitTests/*/bin/*"
+      - "UnitTests/*/*.gcno"
+    expire_in: 1d
+
+ObjectManager:
+  stage: build
+  tags:
+    - qt
+  script:
+    - cd UnitTests/ObjectManagerTest
+    - ./bin/tst_objectmanagertest
+  artifacts:
+    expire_in: 1d
+  dependencies:
+    - BuildUnitTests
+    
+GameEventHandler:
+  stage: build
+  tags:
+    - qt
+  script:
+    - cd UnitTests/GameEventHandlerTest
+    - ./bin/tst_gameeventhandlertest
+  artifacts:
+    expire_in: 1d
+  dependencies:
+    - BuildUnitTests
 
 ################################
 
@@ -57,17 +84,3 @@ PerformAnalysis:
   dependencies:
     - PrepareAnalysis
     
-PerformBranchAnalysis:
-  image: pervasivetut/sonar-qt-analyzer
-  stage: analysis
-  tags:
-    - analysis
-  script:
-    - sonar-scanner -Dsonar.host.url=$SONARQUBE_URL -Dsonar.login=$SONARQUBE_TOKEN -Dsonar.projectKey=$SONAR_PROJECT_KEY -Dsonar.branch.name=$CI_COMMIT_REF_NAME -Dsonar.gitlab.commit_sha=$CI_COMMIT_SHA -Dsonar.gitlab.ref_name=$CI_COMMIT_REF_NAME -Dsonar.gitlab.project_id=$CI_PROJECT_ID
-  when: always
-  except:
-    refs:
-    - master
-  dependencies:
-    - PrepareAnalysis
-    - GameBoard
