--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,8 @@ sonar.projectVersion=0.1
 sonar.sources=.
 sonar.tests=UnitTests/
 
-sonar.exclusions=**/moc_*,**/ui_*, Course/**, UnitTests/**
+#sonar.exclusions=**/moc_*,**/ui_*, Course/**, UnitTests/**
+sonar.exclusions=**/moc_*,**/ui_*, Course/**
 sonar.showProfiling=true
 sonar.cfamily.build-wrapper-output=bw_output
 sonar.cfamily.gcov.reportsPath=Tests
