--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,10 +1,10 @@
 sonar.projectVersion=0.1
 
 sonar.sources=.
-sonar.tests=UnitTests/
+#sonar.tests=UnitTests/
 
-sonar.exclusions=**/moc_*,**/ui_*, Course/**, UnitTests/**
-#sonar.exclusions=**/moc_*,**/ui_*, Course/**
+#sonar.exclusions=**/moc_*,**/ui_*, Course/**, UnitTests/**
+sonar.exclusions=**/moc_*,**/ui_*, Course/**
 sonar.showProfiling=true
 sonar.cfamily.build-wrapper-output=bw_output
 sonar.cfamily.gcov.reportsPath=Tests
